# opencloud-desktop

./: .craft.ini  .craft.shelf  .env.example  .envrc  .gitignore  .woodpecker.env  AUDIT_VERIFICATION_BY_SONNET.md  AUDIT_VERIFICATION_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  OPENCLOUD.cmake  PACKAGING.md  PROGRESS.md  README.md  THEME.cmake  VERSION.cmake  WARP.md  audit-claude.md  audit-gemini.md  audit-glm.md  audit-grok.md  audit-kimi.md  audit-pickle.md  audit-verification-summary.md  audit-visual-summary.md  plan.md  release-config.ts
src/cmd/: CMakeLists.txt  CMakeLists_console.txt  CMakeLists_simple.txt  README_FontIcon_Collector.md  cmd.cpp  fonticon_collector.cpp  fonticon_collector_console.cpp  fonticon_collector_simple.cpp  run_fonticon_tools.sh  tokencredentials.cpp  tokencredentials.h
src/csync/: CMakeLists.txt  ConfigureChecks.cmake  config.h.in  csync.h  csync_exclude.cpp
src/csync/common/: CMakeLists.txt  asserts.h  c_jhash.h  checksums.h  depreaction.h  filesystembase.h  fixedsizeringbuffer.h  ownsql.h  pinstate.h  plugin.h  preparedsqlquerymanager.h  remotepermissions.h  syncjournaldb.cpp  syncjournaldb.h  syncjournalfilerecord.h  utility_mac.mm  vfs.cpp  vfs.h
src/csync/std/: c_time.cpp
src/csync/vio/: csync_vio_local_unix.cpp
src/gui/: CMakeLists.txt  MacOSXBundleInfo.plist  OpenCloud.entitlements  aboutdialog.cpp  aboutdialog.ui  accountmanager.cpp  accountmanager.h  accountsettings.cpp  accountsettings.h  accountsettings.ui  accountstate.cpp  accountstate.h  activitydata.h  activitywidget.cpp  activitywidget.h  application.cpp  application.h  clientproxy.cpp  clientproxy.h  commonstrings.cpp  commonstrings.h  connectionvalidator.cpp  connectionvalidator.h  fetchserversettings.cpp  fetchserversettings.h  fileproviderdomainmanager.h  fileproviderdomainmanager_mac.mm  folder.cpp  folder.h  folderdefinition.cpp  folderdefinition.h  folderman.cpp  folderman.h  folderstatusmodel.cpp  folderstatusmodel.h  folderwatcher.cpp  folderwatcher.h  folderwatcher_linux.cpp  folderwatcher_linux.h  folderwatcher_mac.cpp  (+57 more)
src/gui/creds/: httpcredentialsgui.cpp  httpcredentialsgui.h  qmlcredentials.cpp  qmlcredentials.h
src/gui/folderwizard/: CMakeLists.txt  folderwizard.cpp  folderwizard.h  folderwizard_p.h  folderwizardlocalpath.cpp  folderwizardselectivesync.cpp  folderwizardselectivesync.h  folderwizardsourcepage.ui  spacespage.h  spacespage.ui
src/gui/macOS/: fileprovider.h  fileprovider_mac.mm  fileproviderdomainmanager.h  fileproviderdomainmanager_mac.mm  fileproviderxpc.h  fileproviderxpc_mac.mm
src/gui/models/: activitylistmodel.h  protocolitemmodel.cpp  protocolitemmodel.h
src/gui/newwizard/: CMakeLists.txt  enums.cpp  enums.h  navigation.cpp  setupwizardaccountbuilder.cpp  setupwizardaccountbuilder.h  setupwizardcontroller.cpp  setupwizardcontroller.h  setupwizardwidget.cpp  setupwizardwidget.ui
src/gui/notifications/: dbusnotifications.cpp  dbusnotifications.h  macnotifications.h  macnotifications.mm  org.freedesktop.Notifications.xml  snoretoast.cpp  snoretoast.h  systemnotification.cpp  systemnotification.h  systemnotificationbackend.cpp  systemnotificationbackend.h  systemnotificationmanager.cpp  systemnotificationmanager.h
src/gui/qml/: AccountBar.qml  AccountButton.qml  FolderDelegate.qml  FolderError.qml  Notifications.qml  OpenCloud.js  UpdateUrlDialog.qml
src/gui/scheduling/: etagwatcher.cpp  etagwatcher.h  syncscheduler.cpp  syncscheduler.h
src/gui/socketapi/: CMakeLists.txt  socketapi.cpp  socketapi.h  socketapisocket_mac.h  socketapisocket_mac.mm
src/gui/spaces/: CMakeLists.txt  spaceimageprovider.cpp  spacesbrowser.cpp
src/gui/updater/: CMakeLists.txt  appimageupdater.cpp  ocupdater.cpp  ocupdater.h  sparkleupdater_mac.mm  updateinfo.cpp  updateinfo.h  updater.cpp  updater.h
src/libsync/: CMakeLists.txt  abstractcorejob.cpp  abstractcorejob.h  abstractnetworkjob.cpp  abstractnetworkjob.h  accessmanager.cpp  accessmanager.h  account.cpp  account.h  appprovider.cpp  appprovider.h  bandwidthmanager.cpp  capabilities.cpp  capabilities.h  config.h.in  configfile.cpp  configfile.h  cookiejar.cpp  cookiejar.h  csync.cpp  csync.h  csync_exclude.cpp  csync_exclude.h  determineauthtypejobfactory.h  discovery.cpp  discovery.h  discoveryinfo.cpp  discoveryinfo.h  discoveryphase.cpp  discoveryphase.h  discoveryremoteinfo.cpp  discoveryremoteinfo.h  filesystem.cpp  filesystem.h  globalconfig.cpp  globalconfig.h  httplogger.cpp  httplogger.h  jobqueue.cpp  jobqueue.h  (+45 more)
src/libsync/common/: CMakeLists.txt  checksumalgorithms.h  checksums.cpp  checksums.h  chronoelapsedtimer.cpp  chronoelapsedtimer.h  filesystembase.cpp  filesystembase.h  ownsql.cpp  ownsql.h  pinstate.h  (+20 more)
src/resources/: CMakeLists.txt  client.qrc  core_theme.qrc  fonticon.cpp  fonticon.h  loadresources.cpp  loadresources.h  qmlresources.cpp  qmlresources.h  resources.cpp  resources.h  template.cpp  template.h  themewatcher.h
test/: CMakeLists.txt  opencloud_add_test.cmake  owncloud_add_test.cmake  testblacklist.cpp  testchecksumvalidator.cpp  testconcaturl.cpp  testdatabaseerror.cpp  testexcludedfiles.cpp  testfolderman.cpp  testfoldermigration.cpp  testfolderwatcher.cpp  testinotifywatcher.cpp  testjhash.cpp  testjobqueue.cpp  testlockedfiles.cpp  testlongpath.cpp  testoauth.cpp  testowncloudpropagator.cpp  testownsql.cpp  testpermissions.cpp  testremotediscovery.cpp  testsyncconflict.cpp  testsyncengine.cpp  testsyncfileitem.cpp  testsyncfilestatustracker.cpp  testsyncjournaldb.cpp  testsyncmove.cpp  testupdater.cpp  testutility.cpp  testxmlparse.cpp
test/gui/: config.sample.ini  envs.txt  requirements.txt  suite.conf
test/manual/: testplan.md
test/modeltests/: CMakeLists.txt  testactivitymodel.cpp  testprotocolmodel.cpp
test/testconnectionvalidator/: capabilities.json.in  status.php.json.in  testconnectionvalidator.cpp
test/testoauth/: testoauth.cpp
test/testspacesmigration/: drivespayload.json  testspacesmigration.cpp
test/testutils/: CMakeLists.txt  syncenginetestutils.cpp  syncenginetestutils.h  test_helper.cpp  testutils.cpp  testutils.h
(+257 files in other folders)
